<resources>
    <string name="appName" translatable="false">GitNex</string>
    <string name="appEmail" translatable="false">hello@gitnex.com</string>
    <string name="appRepo" translatable="false">Source code</string>
    <string name="appRepoLink" translatable="false">https://codeberg.org/gitnex/GitNex</string>
    <string name="appWebsiteLink" translatable="false">https://gitnex.com/</string>
    <string name="commitPage" translatable="false">Your Instance Version</string>
    <string name="supportLinkPatreon" translatable="false">https://www.patreon.com/mmarif</string>
    <string name="supportLinkBuyMeaCoffee" translatable="false">https://www.buymeacoffee.com/mmarif</string>
    <string name="feedbackLink" translatable="false">https://cloud.swatian.com/apps/forms/s/xe7KekTNKgrj58EK6WHQyJDf</string>
    <string name="appVersionBuild" translatable="false">%s / %d</string>
    <string name="appDesc" translatable="false">GitNex is a free, open-source Android client for Git repository management tools Forgejo and Gitea. GitNex is Licensed under GPLv3.\n\nThanks to all the contributors and donators for your generous work and donations.</string>
    <string name="crowdInLink" translatable="false">https://crowdin.com/project/gitnex</string>
    <string name="crashReportEmailSubject" translatable="false">[GitNex] - Crash Report #%1$d</string>
    <string name="translateWithCrowdin" translatable="false">Crowdin</string>
    <string name="translateText" translatable="false">Translate</string>
    <string name="supportText" translatable="false">Support</string>
    <string name="supportTextPatreon" translatable="false">Patreon</string>
    <string name="supportTextBuyMeaCoffee" translatable="false">BMC</string>
    <string name="feedbackText" translatable="false">Feedback</string>
    <string name="navMyRepos">My Repositories</string>
    <string name="navStarredRepos">Starred Repositories</string>
    <string name="navRepos">Repositories</string>
    <string name="navProfile">Profile</string>
    <string name="navSettings">Settings</string>
    <string name="navOrg">Organizations</string>
    <string name="navAbout">About</string>
    <string name="navRate">Rate GitNex</string>
    <string name="navLogout">Logout</string>
    <string name="navAdministration">Instance Administration</string>
    <string name="navMyIssues">My Issues</string>
    <string name="navMostVisited">Most Visited Repos</string>
    <string name="navNotes">Notes</string>
    <string name="navAccount">Account Settings</string>
    <string name="navWatchedRepositories">Watched Repositories</string>
    <string name="pageTitleNewRepo">New Repository</string>
    <string name="pageTitleIssues">Issues</string>
    <string name="pageTitleCreateOrganization">New Organization</string>
    <string name="pageTitleCreateMilestone">New Milestone</string>
    <string name="pageTitleCreateNewIssue">New Issue</string>
    <string name="pageTitleCreateLabel">New Label</string>
    <string name="pageTitleCredits">Credits</string>
    <string name="pageTitleChooseBranch">Select Branch</string>
    <string name="pageTitleLabelUpdate">Update Label</string>
    <string name="pageTitleStarredRepos">Starred Repositories</string>
    <string name="pageTitleCreateTeam">New Team</string>
    <string name="pageTitleAddEmail">Add Email Address</string>
    <string name="pageTitleNewFile">New File</string>
    <string name="pageTitleExplore">Explore</string>
    <string name="pageTitleAdministration">Administration</string>
    <string name="pageTitleNewPullRequest">New Pull Request</string>
    <string name="pageTitleUsers">Users</string>
    <string name="pageTitleAddRepository">Add Repository</string>
    <string name="repoName">Demo repo</string>
    <string name="repoDescription">Demo description</string>
    <string name="orgName">Demo organization</string>
    <string name="newCreateButtonCopy">Create</string>
    <string name="newUpdateButtonCopy">Update</string>
    <string name="newRepoTintCopy">Repository Name</string>
    <string name="newRepoDescTintCopy">Repository Description</string>
    <string name="newRepoPrivateCopy">Private</string>
    <string name="newRepoOwner">Owner</string>
    <string name="newOrgTintCopy">Organization Name</string>
    <string name="newOrgDescTintCopy">Organization Description</string>
    <string name="userName">Username</string>
    <string name="passWord">Password</string>
    <string name="btnLogin">LOGIN</string>
    <string name="instanceUrl">Instance URL</string>
    <string name="navigationDrawerOpen">Open Navigation Drawer</string>
    <string name="navigationDrawerClose">Close Navigation Drawer</string>
    <string name="protocol">Protocol</string>
    <string name="urlInfoTooltip">1- Choose the correct protocol(https or http). \n2- Enter instance url e.g: try.gitea.io. \n3- If you have enabled 2FA for your account, enter the code in the OTP Code field. \n4- For HTTP basic auth use USERNAME@DOMAIN.COM in the URL field.</string>
    <string name="malformedUrl">Couldn\'t connect to host. Please check your URL or port for any errors</string>
    <string name="protocolError">It is not recommended to use HTTP protocol unless you are testing on local network</string>
    <string name="malformedJson">Malformed JSON was received. Server response was not successful</string>
    <string name="emptyFieldURL">Instance URL is required</string>
    <string name="emptyFieldUsername">Username is required</string>
    <string name="emptyFieldPassword">Password is required</string>
    <string name="protocolEmptyError">Protocol is required</string>
    <string name="instanceHelperText">Enter URL without http or https. Example: codeberg.org</string>
    <string name="checkNetConnection">Cannot access network, please check your Internet connection</string>
    <string name="repoNameErrorEmpty">Repository name is empty</string>
    <string name="repoNameErrorInvalid">Repository name is not valid. [a&#8211;z A&#8211;Z 0&#8211;9 &#8211; _]</string>
    <string name="repoNameErrorReservedName">Repository name is reserved</string>
    <string name="repoNameErrorReservedPatterns">Repository name contains reserved keywords</string>
    <string name="repoDescError">Repository description exceeds the max 255 characters limit</string>
    <string name="repoCreated">Repository created successfully</string>
    <string name="repoExistsError">Repository of this name already exists under selected Owner</string>
    <string name="repoOwnerError">Select owner for the repository</string>
    <string name="orgNameErrorEmpty">Organization name is empty</string>
    <string name="orgNameErrorInvalid">Organization name is not valid, [a&#8211;z A&#8211;Z 0&#8211;9 &#8211; _]</string>
    <string name="orgDescError">Organization description exceeds the max 255 characters limit</string>
    <string name="orgCreated">Organization created successfully</string>
    <string name="orgExistsError">Organization already exists</string>
    <string name="diffStatistics">%1$s addition(s) and %2$s deletion(s)</string>
    <string name="processingText">Processing</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="addNewContent">Add</string>
    <string name="orgContentAvatar">Org</string>
    <string name="repoContentAvatar">Repo</string>
    <string name="privateAvatar">Pri</string>
    <string name="repoStars" translatable="false">12345</string>
    <string name="repoWatchers" translatable="false">98324</string>
    <string name="removeContent">Remove</string>
    <string name="genericApiError">Instance has returned an error. Code %d</string>
    <string name="tabTextInfo">Details</string>
    <string name="tabTextFiles">Files</string>
    <string name="tabTextMl">Milestones</string>
    <string name="tabTextReleases">Releases</string>
    <string name="tabTextBranches">Branches</string>
    <string name="tabTextCollaborators">Collaborators</string>
    <string name="tabPullRequests">Pull Requests</string>
    <string name="pullRequest">Pull Request</string>
    <string name="infoTabRepoSize">Size</string>
    <string name="infoTabRepoDefaultBranch">Default Branch</string>
    <string name="infoTabRepoSshUrl">SSH URL</string>
    <string name="infoTabRepoCloneUrl">Clone URL</string>
    <string name="infoTabRepoRepoUrl">Repo URL</string>
    <string name="infoTabRepoForksCount">Forks</string>
    <string name="infoTabRepoCreatedAt">Created</string>
    <string name="infoTabRepoUpdatedAt">Last Updated</string>
    <string name="infoTabRepoZero" translatable="false">0</string>
    <string name="infoShowMoreInformation">Show More Information</string>
    <string name="infoMoreInformation">More Information</string>
    <string name="timeAtText">at</string>
    <string name="hash" translatable="false">#</string>
    <string name="issueMilestone">Milestone %1$s</string>
    <string name="dueDate">Due on %1$s</string>
    <string name="assignedTo">Assigned to: %1$s</string>
    <string name="assignedToMe">Assigned to Me</string>
    <string name="commentButtonText">Comment</string>
    <string name="commentEmptyError">Please write your comment</string>
    <string name="commentSuccess">Comment posted</string>
    <string name="featureDeprecated">This function will be removed in the future</string>
    <string name="screamingInFearEmoticon" translatable="false">😱</string>
    <string name="generalImgContentText">Image</string>
    <string name="commitAuthor">Commit author: %1$s</string>
    <string name="releaseDownloadText">Downloads</string>
    <string name="releaseTypePre" translatable="false">Pre-Release</string>
    <string name="releaseTypeStable" translatable="false">Stable</string>
    <string name="releasePublishedBy">Published by @%1$s</string>
    <string name="noReleaseBodyContent">Release notes are not provided by the publisher.</string>
    <string name="newMilestoneTitle">Title</string>
    <string name="newMilestoneDescription">Description</string>
    <string name="newMilestoneDueDate">Due Date</string>
    <string name="setDueDate" translatable="false">%1$d-%2$d-%3$d</string>
    <string name="milestoneNameErrorEmpty">Milestone title is empty</string>
    <string name="addCollaboratorViewUserDesc">Username</string>
    <string name="openWebRepo">Open in Browser</string>
    <string name="cancelButton">Cancel</string>
    <string name="saveButton">Save</string>
    <string name="websiteText">Website</string>
    <string name="titleDrafts">Drafts</string>
    <string name="addNewAccountText">Add New Account</string>
    <string name="pageTitleNotifications">Notifications</string>
    <string name="repoPropertiesTemplate">Set as Template</string>
    <string name="repoPropertiesEnableIssues">Enable Issues</string>
    <string name="repoPropertiesEnableWiki">Enable Wiki</string>
    <string name="repoPropertiesEnablePr">Enable Pull Requests</string>
    <string name="repoPropertiesEnableTimeTracker">Enable Time Tracker</string>
    <string name="repoPropertiesEnableMergeCommits">Enable Merge Commits</string>
    <string name="repoPropertiesEnableRebase">Enable Rebase</string>
    <string name="repoPropertiesEnableSquash">Enable Squash and Merge</string>
    <string name="repoPropertiesEnableForceMerge">Enable Rebase with Merge Commits (&#8212;&#8212;no-ff)</string>
    <string name="accountDoesNotExist">It seems that account for URI %1$s does not exists in the app. You can add one by tapping on the Add New Account button.</string>
    <string name="launchApp">Go to App</string>
    <string name="noActionText">GitNex cannot handle the requested resource, you can open an issue at the project repository as an improvement with providing details of the work. Just launch a default screen for now from the buttons below, it can be changed from settings.</string>
</resources>