<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_corners"
    android:orientation="vertical">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="?attr/progressIndicatorColor"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repoNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/newRepoTintCopy"
                    android:textColorHint="?attr/hintColor"
                    app:boxBackgroundColor="?attr/inputBackgroundColor"
                    app:boxStrokeErrorColor="@color/darkRed"
                    app:hintTextColor="?attr/hintColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repoName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/inputTextColor"
                        android:textColorHighlight="?attr/hintColor"
                        android:textColorHint="?attr/hintColor"
                        android:textSize="16sp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repoWebsiteLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/websiteText"
                    android:textColorHint="?attr/hintColor"
                    app:boxBackgroundColor="?attr/inputBackgroundColor"
                    app:boxStrokeErrorColor="@color/darkRed"
                    app:hintTextColor="?attr/hintColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repoWebsite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/inputTextColor"
                        android:textColorHighlight="?attr/hintColor"
                        android:textColorHint="?attr/hintColor"
                        android:textSize="16sp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repoDescriptionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/newRepoDescTintCopy"
                    android:textColorHint="?attr/hintColor"
                    app:boxBackgroundColor="?attr/inputBackgroundColor"
                    app:boxStrokeErrorColor="@color/darkRed"
                    app:hintTextColor="?attr/hintColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repoDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/inputTextColor"
                        android:textColorHighlight="?attr/hintColor"
                        android:textColorHint="?attr/hintColor"
                        android:textSize="16sp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repoPrivate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/newRepoPrivateCopy"
                    android:textColor="?attr/primaryTextColor"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repoAsTemplate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/repoPropertiesTemplate"
                    android:textColor="?attr/primaryTextColor"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repoEnableIssues"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/repoPropertiesEnableIssues"
                    android:textColor="?attr/primaryTextColor"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repoEnableWiki"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/repoPropertiesEnableWiki"
                    android:textColor="?attr/primaryTextColor"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repoEnablePr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/repoPropertiesEnablePr"
                    android:textColor="?attr/primaryTextColor"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repoEnableTimer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/repoPropertiesEnableTimeTracker"
                    android:textColor="?attr/primaryTextColor"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repoEnableMerge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/repoPropertiesEnableMergeCommits"
                    android:textColor="?attr/primaryTextColor"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repoEnableRebase"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/repoPropertiesEnableRebase"
                    android:textColor="?attr/primaryTextColor"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repoEnableSquash"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/repoPropertiesEnableSquash"
                    android:textColor="?attr/primaryTextColor"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repoEnableForceMerge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/repoPropertiesEnableForceMerge"
                    android:textColor="?attr/primaryTextColor"/>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerColor"/>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/processingRequest"
                style="@style/Widget.MaterialComponents.LinearProgressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="?attr/progressIndicatorColor"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <Button
                    android:id="@+id/cancel"
                    style="?android:attr/button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:text="@string/cancelButton"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/save"
                    style="?android:attr/button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/saveButton"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
